base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(APP_NAME) # Nombre del Deployment usando la variable
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: $(APP_NAME) # Selector usando la variable
  template:
    metadata:
      labels:
        app: $(APP_NAME) # Label usando la variable
    spec:
      containers:
      - name: $(APP_NAME) # Nombre del contenedor usando la variable
        image: ${IMAGE}:${TAG}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: $(APP_NAME)-config # Nombre del ConfigMap usando la variable
