base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(APP_NAME) # Nombre del servicio usando la variable
spec:
  selector:
    app: $(APP_NAME) # Selector usando la variable
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
